--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "connect-mongo": "^4.6.0",
-    "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
@@ -21,6 +20,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "logger": "^0.0.1",
+    "method-override": "^3.0.0",
     "mongoose": "^6.7.4",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
