--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "logger": "^0.0.1",
+    "luxon": "^3.1.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.7.4",
     "nodemon": "^2.0.20",
