--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
     "logger": "^0.0.1",
     "luxon": "^3.1.1",
     "method-override": "^3.0.0",
